# fsspec-xrootd

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.cfg
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml  docs.yml
packaging/fedora/: README.md  python-fsspec-xrootd.spec
src/fsspec_xrootd/: xrootd.py
tests/: test_basicio.py
