[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
write_to = "src/fsspec_xrootd/_version.py"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = [
    "tests",
]


[tool.mypy]
files = "src"
python_version = "3.9"
warn_unused_configs = true
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
ignore_missing_imports = true


[tool.ruff]
target-version = "py39"


[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF100", "T20", "UP", "W"]
ignore = ["E203", "E501", "E722", "B905"]


[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]


[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T20"]
"noxfile.py" = ["T20"]


[tool.check-manifest]
ignore = [
    ".github/**",
    "docs/**",
    ".pre-commit-config.yaml",
    ".readthedocs.yml",
    "src/*/_version.py",
    "noxfile.py",
]

[tool.pylint]
master.py-version = "3.7"
master.ignore-paths = ["src/fsspec_xrootd/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
    "design",
    "fixme",
    "line-too-long",
    "wrong-import-position",
]
